Fix upload button visible on read-only folders
The div that contains the elements related to the creation of new files,
and thus the upload button, is always present in the DOM; it is hidden
or shown based on the folder permissions by adding or removing the
"hidden" CSS class. However, as the other CSS classes for the div are
"actions" and "creatable" and a "display: flex" rule was defined for
".actions.creatable" below the "display: none" rule for
".actions.hidden" the last one took precedence and the div ended being
always visible, even if the "hidden" CSS class was set. Now the rules
for the ".actions.hidden" selector are defined below the rules for the
".actions.creatable" selector and thus the "display: none" rule is
applied as expected.

--- a/apps/files/css/files.scss
+++ b/apps/files/css/files.scss
@@ -16,7 +16,6 @@
 .actions .button a:active {
 	color: #333;
 }
-.actions.hidden { display: none; }
 
 .actions.creatable {
 	position: relative;
@@ -25,6 +24,10 @@
 	.button:not(:last-child) {
 		margin-right: 3px;
 	}
+}
+
+.actions.hidden {
+	display: none;
 }
 
 #trash {
